# lightcube-camera

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
src/: buttons.c  buttons.h  camera.c  camera.h  crosshair.h  image_camera.c  image_camera.h  image_destination.c  image_destination.h  main.c
